<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rootLayout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/solution"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/result"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:text="0"
            android:textSize="64dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:layout_above="@id/buttons_line_1"
            android:layout_margin="16dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttons_line_1">
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_c"
                    android:backgroundTint="#F44336"
                    android:text="C" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_open_bracket"
                    android:text="("/>
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_close_bracket"
                    android:text=")" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_division"
                    android:backgroundTint="#FF9800"
                    android:text="/" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttons_line_2">
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_7"
                    android:text="7" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_8"
                    android:text="8" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_9"
                    android:text="9" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_multiply"
                    android:backgroundTint="#FF9800"
                    android:text="*" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttons_line_3">
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_4"
                    android:text="4" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_5"
                    android:text="5" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_6"
                    android:text="6" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_addition"
                    android:backgroundTint="#FF9800"
                    android:text="+" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttons_line_4">
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_1"
                    android:text="1" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_2"
                    android:text="2" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_3"
                    android:text="3" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_subtraction"
                    android:backgroundTint="#FF9800"
                    android:text="-" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttons_line_5">
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="29dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_reverse"
                    android:text="+-" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_0"
                    android:text="0" />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_dot"
                    android:text="." />
                <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    app:cornerRadius="36dp"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:textSize="32dp"
                    android:textColor="@color/white"
                    android:layout_margin="12dp"
                    android:id="@+id/button_equals"
                    android:backgroundTint="#FF9800"
                    android:text="=" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>